[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]

[node name="GUI" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -512.0
margin_top = -304.0
margin_right = -320.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 72, 208 )
color = Color( 0.403922, 0.403922, 0.403922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = -304.0
margin_right = 512.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 72, 208 )
color = Color( 0.403922, 0.403922, 0.403922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 336.0
margin_top = 64.0
margin_right = 496.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 160.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 60 )
text = "Build"

[node name="ProgramButton" type="Button" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 160.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 60 )
text = "Program"

[node name="RunButton" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 160.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 60 )
text = "Run"

[connection signal="button_up" from="VBoxContainer/BuildButton" to="." method="_on_BuildButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ProgramButton" to="." method="_on_ProgramButton_button_up"]
[connection signal="button_up" from="VBoxContainer/RunButton" to="." method="_on_RunButton_button_up"]
